<resources>
    <string name="app_name">SmartDoor</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_preference">SettingsActivity</string>
    <string name="header_settings">Connection Settings</string>

    <string name="prompt_ip">IP</string>
    <string name="prompt_ip_default"></string>
    <string name="prompt_port">PORT (Optional)</string>
    <string name="prompt_port_default"></string>
    <string name="prompt_app_key">App Key (Optional)</string>
    <string name="prompt_app_key_default"></string>
    <string name="action_connect">Connect To ThingWorx Platform</string>
    <string name="action_disconnect">Disconnect From ThingWorx Platform</string>
    <string name="action_settings">Update Connection Settings</string>
    <string name="error_invalid_ip">This IP is invalid</string>
    <string name="error_invalid_port">This port is invalid</string>
    <string name="error_connection_failed">Connection Failed</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_test">Test</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="prompt_rule">Rulename</string>
    <string name="prompt_condition">Condition</string>
</resources>
